08_TAD_generico/TAD_gen_06/Resultados/Rafael/completo/result_compilation.txt
matrizgenerica.c: In function ‘ObtemNumeroLinhasMatrizGenerica’:
matrizgenerica.c:76:1: warning: control reaches end of non-void function [-Wreturn-type]
   76 | }
      | ^
numcomplexo.c:79:2: error: #endif without #if
   79 | #endif
      |  ^~~~~
